maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:13: error: not found: value rin1
  rin1();
  ^