maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0;
  while(!estSurBiscuit() && getX() != 0){
    etat match {
      case 0 => marcheNord(); etat = 1;
      
      case 1 => suit(); etat = 0;
      
      case _ => ();
    }
  }
  rin1();
	
}

def marcheNord () {
  while(!estFaceMur() && (getDirection() == Direction.NORTH)){
    avance();
  }
}

def suit() {
  var aret = !(getDirection() == Direction.NORTH && !estFaceMur());
  while (!estSurBiscuit() && aret){
    if(estFaceMur()){
      gauche();
      if(estFaceMur()){
        droite();droite();
        if(estFaceMur()){
          droite();
        }
      }
        avance();droite();
    } else {
      gauche();
      if(estFaceMur()){
        droite();avance();
      } else {
        avance();gauche();
      }
      droite();
    }
    aret = !(getDirection() == Direction.NORTH && !estFaceMur());
  } 
}